# ComplexGen

./: .gitignore  .gitmodules  LICENSE  Minkowski_backbone.py  README.md  attention.py  data_loader_abc.py  default.mtl  load_ply.py  matcher_corner.py  matcher_curve.py  matcher_patch.py  mink_resnet.py  mink_resnet_in.py  plywrite.py  transformer3d.py  wedding_invitation.html
GeometricRefine/: CMakeLists.txt
GeometricRefine/GeometricRefine/: CMakeLists.txt
GeometricRefine/GeometricRefine/src/: CurveFitter.cpp  CurveFitter.h  Helper.cpp  Helper.h  Helper_igl.cpp  Helper_igl.h  Intersector.h  KD_Tree.h  KD_Tree.inl  Mesh3D.cpp  Mesh3D.h  MeshIO.h  MyCurve.h  MyObjLoader.h  MyPointCloud.h  MySurf.h  MyTuple.h  NURBSFitting.cpp  NURBSFitting.h  NURBSFittingWrapper.cpp  NURBSFittingWrapper.h  Primal_Dual_graph.h  SurfFitter.cpp  SurfFitter.h  TinyMatrix.h  TinyVector.h  Utils.h  algebra3.h  cxxopts.hpp  main.cpp  quadricfitting.h  stdafx.h
GeometricRefine/GeometricRefine/src/HOptimizer/: CMakeLists.txt  HLBFGS.cpp  HLBFGS.h  HLBFGS_BLAS.cpp  HLBFGS_BLAS.h  HLBFGS_Constraint.cpp  HLBFGS_Constraint.h  HLBFGS_Funcname.h  HLBFGS_Hessian.cpp  HLBFGS_Hessian.h  HLBFGS_Sparse_Matrix.cpp  HLBFGS_Sparse_Matrix.h  HOptimizer.cpp  HOptimizer.h  HOptimizer_Internal.cpp  HOptimizer_Internal.h  ICFS.cpp  ICFS.h  LineSearch.cpp  LineSearch.h
GeometricRefine/allquadricsdirect/: CMakeLists.txt
GeometricRefine/allquadricsdirect/lib/CLAPACK/include/: clapack.h  f2c.h
GeometricRefine/allquadricsdirect/lib/CLAPACK/lib/: blas.lib  blasd.lib  libf2c.lib  libf2cd.lib
GeometricRefine/allquadricsdirect/lib/CLAPACK/lib_64/: BLAS.lib  BLASd.lib  cblaswrap.lib  cblaswrapd.lib  f77blaswrap.lib  f77blaswrapd.lib  libf2c.lib  libf2cd.lib  tmglib.lib  tmglibd.lib
GeometricRefine/allquadricsdirect/lib/jama125/: jama_eig.h
GeometricRefine/allquadricsdirect/src/: quadricfitting.cpp  roots3and4.cpp  roots3and4.h
GeometricRefine/yaml-cpp/: CMakeLists.txt
PostProcess/: complex_extraction.py  gurobi_wrapper.py
chamferdist/chamferdist/: __init__.py  chamfer.py
docs/: complex_extraction_complex_description.md  geometric_refinement_json_description.md  network_prediction_pickle_description.md
scripts/: eval_default.sh  eval_noise002.sh  eval_noise005.sh  eval_partial.sh  extraction_default.sh  extraction_noise002.sh  extraction_noise005.sh  extraction_partial.sh  geometric_refine.py  test_default.sh  test_default_vis.sh  test_noise002.sh  test_noise005.sh  test_partial.sh  train_default.sh  train_noise002.sh  train_noise005.sh  train_partial.sh  train_small.sh
src/: primitives.py
vis/: complexgen.mtl  gen_vis_result.py  load_obj.py  load_ply.py  test.py  vis_util.py  write_obj.py
